[package]
name = "test-patience"
version = "0.1.1"
authors = ["Daniel Faust <hessijames@gmail.com>"]
description = "Synchronize the startup of applications that are part of an integration test"
keywords = ["test", "testing", "integration-testing"]
homepage = "https://github.com/dfaust/test-patience"
repository = "https://github.com/dfaust/test-patience.git"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "dfaust/test-patience" }
appveyor = { repository = "dfaust/test-patience" }
